Solves #3 and solves #2 - allow properties to be loaded by docker mount